fix bug in topbar component. add z-index to be over all components

--- a/src/topbar/topbar.css
+++ b/src/topbar/topbar.css
@@ -6,7 +6,9 @@
     display: flex;
     align-items: center;
     font-family: 'Josefin Sans', sans-serif;
-    justify-content: space-between
+    justify-content: space-between;
+    background-color: white;
+    z-index: 1;
 }
 .topLeft , .topRight {
 flex: 3;
